fix: change the active state effect to align with the style guide.

--- a/blocks/logo2/logo2.css
+++ b/blocks/logo2/logo2.css
@@ -8,5 +8,6 @@
 }
 
 .logo2[href]:active{
+  color: rgb(40, 54, 69);
   opacity: 0.3;
 }
